tests/error/comptime/pointer_arithmetic02.bz
function test()
{
	(consteval {
		consteval i = 0;
		&i - 1;
	});
}
